--- a/Themes/Generic.xaml
+++ b/Themes/Generic.xaml
@@ -1,7 +1,7 @@
-<ResourceDictionary
+﻿<ResourceDictionary
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:controls="using:cycloid" 
+    xmlns:controls="using:cycloid.Controls" 
     xmlns:ui="using:Microsoft.Toolkit.Uwp.UI"
     xmlns:media="using:Microsoft.Toolkit.Uwp.UI.Media" 
     xmlns:mux="using:Microsoft.UI.Xaml.Controls">
@@ -15,10 +15,10 @@
                             x:Name="Border"
                             Background="{StaticResource SystemControlTransientBackgroundBrush}">
                             <Border>
-                              <ui:Effects.Shadow>
-                                <media:AttachedCardShadow Color="#60000000" Offset="2,8"/>
-                              </ui:Effects.Shadow>
-                              <Border 
+                                <ui:Effects.Shadow>
+                                    <media:AttachedCardShadow Color="#60000000" Offset="2,8"/>
+                                </ui:Effects.Shadow>
+                                <Border 
                                     Background="{StaticResource ApplicationPageBackgroundThemeBrush}"
                                     Padding="15"
                                     CornerRadius="5">
