--- a/App.xaml
+++ b/App.xaml
@@ -2,14 +2,13 @@
     x:Class="cycloid.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:cycloid" 
-    xmlns:controls="using:Microsoft.UI.Xaml.Controls">
+    xmlns:cycloid="using:cycloid" 
+    xmlns:mux="using:Microsoft.UI.Xaml.Controls">
 
     <Application.Resources>
-        <controls:XamlControlsResources ControlsResourcesVersion="Version2">
-            <controls:XamlControlsResources.MergedDictionaries>
+        <mux:XamlControlsResources ControlsResourcesVersion="Version2">
+            <mux:XamlControlsResources.MergedDictionaries>
                 <ResourceDictionary>
-
                     <ResourceDictionary.ThemeDictionaries>
                         <ResourceDictionary x:Key="Dark">
                             <StaticResource x:Key="TrackGraphOutline" ResourceKey="TextFillColorPrimaryBrush" />
@@ -29,8 +28,8 @@
                         </ResourceDictionary>
                     </ResourceDictionary.ThemeDictionaries>
                 </ResourceDictionary>
-            </controls:XamlControlsResources.MergedDictionaries>
-        </controls:XamlControlsResources>
+            </mux:XamlControlsResources.MergedDictionaries>
+        </mux:XamlControlsResources>
     </Application.Resources>
     
 </Application>
