--- a/Controls/Map.xaml
+++ b/Controls/Map.xaml
@@ -36,8 +36,8 @@
 
         <Border 
             maps:MapControl.NormalizedAnchorPoint=".5 .5"
-            maps:MapControl.Location="{x:Bind Mode=OneWay, Path=cycloid:ViewModel.ToGeopoint(ViewModel.CurrentPoint)}"
-            Visibility="{x:Bind Mode=OneWay, Path=cycloid:ViewModel.VisibleIfNotNull(ViewModel.CurrentPoint)}">
+            maps:MapControl.Location="{x:Bind Mode=OneWay, Path=cycloid:Convert.ToGeopoint(ViewModel.CurrentPoint)}"
+            Visibility="{x:Bind Mode=OneWay, Path=cycloid:Convert.VisibleIfNotNull(ViewModel.CurrentPoint)}">
             <Grid>
                 <Ellipse 
                     Width="15" 
@@ -50,7 +50,7 @@
                 <Ellipse 
                     Width="8" 
                     Height="8"
-                    Fill="{x:Bind Mode=OneWay, Path=cycloid:ViewModel.GradientToBrush(ViewModel.CurrentPoint.Value.Gradient)}"/>
+                    Fill="{x:Bind Mode=OneWay, Path=cycloid:Convert.GradientToBrush(ViewModel.CurrentPoint.Value.Gradient)}"/>
             </Grid>
         </Border>
         
