--- a/Controls/Compass.xaml
+++ b/Controls/Compass.xaml
@@ -6,7 +6,7 @@
     xmlns:ui="using:Microsoft.Toolkit.Uwp.UI" 
     xmlns:media="using:Microsoft.Toolkit.Uwp.UI.Media" 
     xmlns:animations="using:Microsoft.Toolkit.Uwp.UI.Animations"
-    Visibility="{x:Bind Mode=OneWay, Path=cycloid:ViewModel.VisibleIfNotNull(ViewModel.CurrentPoint)}">
+    Visibility="{x:Bind Mode=OneWay, Path=cycloid:Convert.VisibleIfNotNull(ViewModel.CurrentPoint)}">
 
     <Border UseLayoutRounding="False">
         <ui:Effects.Shadow>
@@ -95,9 +95,9 @@
                         Width="47" 
                         Height="47" 
                         StrokeThickness="4" 
-                        Stroke="{x:Bind Mode=OneWay, Path=cycloid:ViewModel.GradientToBrush(ViewModel.CurrentPoint.Value.Gradient)}"/>
+                        Stroke="{x:Bind Mode=OneWay, Path=cycloid:Convert.GradientToBrush(ViewModel.CurrentPoint.Value.Gradient)}"/>
                     <TextBlock
-                        Text="{x:Bind Mode=OneWay, Path=cycloid:ViewModel.Gradient(ViewModel.CurrentPoint.Value.Gradient)}"
+                        Text="{x:Bind Mode=OneWay, Path=cycloid:Format.Gradient(ViewModel.CurrentPoint.Value.Gradient)}"
                         FontSize="11" 
                         HorizontalAlignment="Center" 
                         VerticalAlignment="Center" 
