--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -15,6 +15,7 @@
             <ColumnDefinition Width="210" />
             <ColumnDefinition />
         </Grid.ColumnDefinitions>
+        <ToggleButton Grid.Column="0" Content="Heatmap" IsChecked="{x:Bind Mode=OneWay, Path=ViewModel.HeatmapVisible}" Command="{x:Bind Mode=OneTime, Path=ViewModel.ToggleHeatmapVisibleCommand}" />
         <Grid
             Grid.Column="1">
             <controls:Map />
