--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -3,7 +3,8 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:cycloid="using:cycloid" 
-    xmlns:controls="using:cycloid.Controls"
+    xmlns:controls="using:cycloid.Controls" 
+    xmlns:mux="using:Microsoft.UI.Xaml.Controls"
     Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
     <Page.Resources>
@@ -26,7 +27,8 @@
             Grid.Row="0"
             Grid.Column="0"
             Grid.RowSpan="2"
-            RowSpacing="5">
+            RowSpacing="10"
+            Margin="5">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
                 <RowDefinition Height="Auto" />
@@ -53,6 +55,10 @@
                         <KeyboardAccelerator Key="N" Modifiers="Control"/>
                     </AppBarButton.KeyboardAccelerators>
                 </AppBarButton>
+                <AppBarButton
+                    Icon="CellPhone"
+                    Label="Wahoo">
+                </AppBarButton>
             </StackPanel>
 
             <ComboBox 
@@ -62,13 +68,100 @@
                 DisplayMemberPath="Name"
                 SelectedItem="{x:Bind Mode=TwoWay, Path=ViewModel.MapStyleAndColor}" />
 
+            <StackPanel
+                Grid.Row="2"
+                Orientation="Horizontal"
+                Spacing="5">
+                <ToggleButton 
+                    IsChecked="{x:Bind Mode=OneWay, Path=ViewModel.HeatmapVisible}" 
+                    Command="{x:Bind Mode=OneTime, Path=ViewModel.ToggleHeatmapVisibleCommand}">
+                    <ToggleButton.KeyboardAccelerators>
+                        <KeyboardAccelerator Key="H" Modifiers="Control" />
+                    </ToggleButton.KeyboardAccelerators>
+                    <Border Width="20" Height="20">
+                        <PathIcon 
+                            Data="M 6.426 0.7 L 0.63 11.9 L 4.046 11.9 L 6.426 7.433 L 8.792 11.9 L 12.18 11.9 L 6.426 0.7 Z M 12.18 11.9 L 10.5 15.252 L 8.792 11.9 L 6.202 11.9 L 10.5 20.3 L 14.77 11.9 L 12.18 11.9 Z" 
+                            Foreground="{ThemeResource ToggleButtonForeground}" 
+                            HorizontalAlignment="Center"/>
+                    </Border>
+                </ToggleButton>
+                <ToggleButton
+                    IsEnabled="{x:Bind Mode=OneWay, Path=cycloid:Convert.TrueIfNotNull(ViewModel.Track)}"
+                    IsChecked="{x:Bind Mode=TwoWay, Path=ViewModel.TrackVisible}">
+                    <ToggleButton.KeyboardAccelerators>
+                        <KeyboardAccelerator Key="T" Modifiers="Control" />
+                    </ToggleButton.KeyboardAccelerators>
+                    <SymbolIcon Symbol="Directions" />
+                </ToggleButton>
+                <ToggleButton 
+                    IsEnabled="{x:Bind Mode=OneWay, Path=cycloid:Convert.TrueIfNotNull(ViewModel.Track)}"
+                    IsChecked="{x:Bind Mode=TwoWay, Path=ViewModel.PoisVisible}">
+                    <ToggleButton.KeyboardAccelerators>
+                        <KeyboardAccelerator Key="I" Modifiers="Control" />
+                    </ToggleButton.KeyboardAccelerators>
+                    <SymbolIcon Symbol="MapPin" />
+                </ToggleButton>
+            </StackPanel>
+
+            <mux:TabView 
+                Grid.Row="3"
+                Width="210" 
+                IsAddTabButtonVisible="False" 
+                TabWidthMode="Compact">
+                <mux:TabView.TabItems>
+                    <mux:TabViewItem 
+                        Header="Edit"
+                        IsClosable="false">
+                        <mux:TabViewItem.IconSource>
+                            <mux:SymbolIconSource Symbol="Edit" />
+                        </mux:TabViewItem.IconSource>
+                        <Grid
+                            RowSpacing="5"
+                            ColumnSpacing="10">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="Auto" />
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition Width="*" />
+                                <ColumnDefinition Width="2*" />
+                            </Grid.ColumnDefinitions>
+                            <TextBlock Grid.Row="0" Grid.Column="0" HorizontalTextAlignment="End" Text="Distance" />
+                            <TextBlock Grid.Row="1" Grid.Column="0" HorizontalTextAlignment="End" Text="Time" />
+                            <TextBlock Grid.Row="2" Grid.Column="0" HorizontalTextAlignment="End" Text="Ascent" />
+                            <TextBlock Grid.Row="3" Grid.Column="0" HorizontalTextAlignment="End" Text="Descent" />
+                            <!--<TextBlock Grid.Row="0" Grid.Column="1" Text="{x:Bind Mode=OneWay, Path=cycloid:Format.Distance(ViewModel.Track.Points.Total.Distance)}" />
+                            <TextBlock Grid.Row="1" Grid.Column="1" Text="{x:Bind Mode=OneWay, Path=cycloid:Format.Duration(ViewModel.Track.Points.Total.Time)}" />
+                            <TextBlock Grid.Row="2" Grid.Column="1" Text="{x:Bind Mode=OneWay, Path=cycloid:Format.Altitude(ViewModel.Track.Points.Total.Ascent)}" />
+                            <TextBlock Grid.Row="3" Grid.Column="1" Text="{x:Bind Mode=OneWay, Path=cycloid:Format.Altitude(ViewModel.Track.Points.Total.Descent)}" />-->
+                        </Grid>
+                    </mux:TabViewItem>
+                    <mux:TabViewItem 
+                        Header="Sections" 
+                        IsClosable="false">
+                        <mux:TabViewItem.IconSource>
+                            <mux:SymbolIconSource Symbol="FullScreen" />
+                        </mux:TabViewItem.IconSource>
+                    </mux:TabViewItem>
+                    <mux:TabViewItem 
+                        Header="POI" 
+                        IsClosable="false">
+                        <mux:TabViewItem.IconSource>
+                            <mux:SymbolIconSource Symbol="MapPin" />
+                        </mux:TabViewItem.IconSource>
+                    </mux:TabViewItem>
+                    <mux:TabViewItem 
+                        Header="Train" 
+                        IsClosable="false">
+                        <mux:TabViewItem.IconSource>
+                            <mux:SymbolIconSource Symbol="Play" />
+                        </mux:TabViewItem.IconSource>
+                    </mux:TabViewItem>
+                </mux:TabView.TabItems>
+            </mux:TabView>
             
-            
-            <ToggleButton 
-                Grid.Row="3" 
-                Content="Heatmap" 
-                IsChecked="{x:Bind Mode=OneWay, Path=ViewModel.HeatmapVisible}" 
-                Command="{x:Bind Mode=OneTime, Path=ViewModel.ToggleHeatmapVisibleCommand}" />
         </Grid>
 
         <Grid
