--- a/Controls/Compass.xaml
+++ b/Controls/Compass.xaml
@@ -2,10 +2,10 @@
     x:Class="cycloid.Controls.Compass"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:cycloid="using:cycloid"
-    xmlns:ui="using:Microsoft.Toolkit.Uwp.UI" 
-    xmlns:media="using:Microsoft.Toolkit.Uwp.UI.Media" 
-    xmlns:animations="using:Microsoft.Toolkit.Uwp.UI.Animations"
+    xmlns:cycloid="using:cycloid" 
+    xmlns:ui="using:CommunityToolkit.WinUI" 
+    xmlns:media="using:CommunityToolkit.WinUI.Media" 
+    xmlns:animations="using:CommunityToolkit.WinUI.Animations"
     Visibility="{x:Bind Mode=OneWay, Path=cycloid:Convert.VisibleIfNotNull(ViewModel.CurrentPoint)}">
 
     <Border UseLayoutRounding="False">
