--- a/Themes/Generic.xaml
+++ b/Themes/Generic.xaml
@@ -2,9 +2,9 @@
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:controls="using:cycloid.Controls" 
-    xmlns:ui="using:Microsoft.Toolkit.Uwp.UI"
-    xmlns:media="using:Microsoft.Toolkit.Uwp.UI.Media" 
-    xmlns:mux="using:Microsoft.UI.Xaml.Controls">
+    xmlns:mux="using:Microsoft.UI.Xaml.Controls" 
+    xmlns:ui="using:CommunityToolkit.WinUI" 
+    xmlns:media="using:CommunityToolkit.WinUI.Media">
 
     <Style TargetType="controls:PopupBrowser">
         <Setter Property="Template">
