--- a/Controls/Compass.xaml
+++ b/Controls/Compass.xaml
@@ -2,23 +2,24 @@
     x:Class="cycloid.Controls.Compass"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:cycloid="using:cycloid" 
-    xmlns:ui="using:CommunityToolkit.WinUI" 
-    xmlns:media="using:CommunityToolkit.WinUI.Media" 
     xmlns:animations="using:CommunityToolkit.WinUI.Animations"
+    xmlns:cycloid="using:cycloid"
+    xmlns:media="using:CommunityToolkit.WinUI.Media"
+    xmlns:ui="using:CommunityToolkit.WinUI"
     Visibility="{x:Bind Mode=OneWay, Path=cycloid:Convert.VisibleIfNotNull(ViewModel.CurrentPoint)}">
 
-    <Border UseLayoutRounding="False">
+    <Border>
         <ui:Effects.Shadow>
-            <media:AttachedCardShadow Color="#60000000" Offset="2,8"/>
+            <media:AttachedCardShadow Offset="2,8" Color="#60000000" />
         </ui:Effects.Shadow>
 
-        <Border Background="{ThemeResource MapOverlayBackgroundBrush}"
+        <Border
             Padding="5"
-            CornerRadius="5">
-            <Grid Width="80" 
-                Height="80">
-                <Grid 
+            Background="{ThemeResource MapOverlayBackgroundBrush}"
+            CornerRadius="5"
+            UseLayoutRounding="False">
+            <Grid Width="80" Height="80">
+                <Grid
                     x:Name="Grid"
                     ui:VisualExtensions.CenterPoint="40,40,0"
                     ui:VisualExtensions.RotationAngleInDegrees="{x:Bind Mode=OneWay, Path=HeadingToRotationAngle(ViewModel.CurrentPoint.Value.Heading)}">
@@ -40,17 +41,17 @@
                         </Style>
                     </Grid.Resources>
 
-                    <Ellipse Width="80" Height="80"/>
+                    <Ellipse Width="80" Height="80" />
                     <Ellipse Width="54.4" Height="54.4" />
 
                     <TextBlock Text="N">
                         <TextBlock.RenderTransform>
-                            <CompositeTransform Rotation="0" TranslateY="-32.5"/>
+                            <CompositeTransform Rotation="0" TranslateY="-32.5" />
                         </TextBlock.RenderTransform>
                     </TextBlock>
                     <TextBlock Text="S">
                         <TextBlock.RenderTransform>
-                            <CompositeTransform Rotation="180" TranslateY="32.5"/>
+                            <CompositeTransform Rotation="180" TranslateY="32.5" />
                         </TextBlock.RenderTransform>
                     </TextBlock>
                     <TextBlock Text="W">
@@ -76,34 +77,43 @@
                                 <Setter Property="Stroke" Value="{ThemeResource TextFillColorDisabledBrush}" />
                             </Style>
                         </Canvas.Resources>
-                        <Line 
-                            X1="21.6" Y1="21.6" 
-                            X2="24.8" Y2="24.8" />
-                        <Line 
-                            X1="-21.6" Y1="21.6" 
-                            X2="-24.8" Y2="24.8" />
-                        <Line 
-                            X1="-21.6" Y1="-21.6" 
-                            X2="-24.8" Y2="-24.8" />
-                        <Line 
-                            X1="21.6" Y1="-21.6" 
-                            X2="24.8" Y2="-24.8" />
+                        <Line
+                            X1="21.6"
+                            X2="24.8"
+                            Y1="21.6"
+                            Y2="24.8" />
+                        <Line
+                            X1="-21.6"
+                            X2="-24.8"
+                            Y1="21.6"
+                            Y2="24.8" />
+                        <Line
+                            X1="-21.6"
+                            X2="-24.8"
+                            Y1="-21.6"
+                            Y2="-24.8" />
+                        <Line
+                            X1="21.6"
+                            X2="24.8"
+                            Y1="-21.6"
+                            Y2="-24.8" />
                     </Canvas>
                 </Grid>
                 <Grid>
                     <Ellipse
-                        Width="47" 
-                        Height="47" 
-                        StrokeThickness="4" 
-                        Stroke="{x:Bind Mode=OneWay, Path=cycloid:Convert.GradientToBrush(ViewModel.CurrentPoint.Value.Gradient)}"/>
+                        Width="47"
+                        Height="47"
+                        Stroke="{x:Bind Mode=OneWay, Path=cycloid:Convert.GradientToBrush(ViewModel.CurrentPoint.Value.Gradient)}"
+                        StrokeThickness="4" />
                     <TextBlock
+                        HorizontalAlignment="Center"
+                        VerticalAlignment="Center"
+                        FontSize="11"
                         Text="{x:Bind Mode=OneWay, Path=cycloid:Format.Gradient(ViewModel.CurrentPoint.Value.Gradient)}"
-                        FontSize="11" 
-                        HorizontalAlignment="Center" 
-                        VerticalAlignment="Center" 
                         TextLineBounds="Tight" />
                 </Grid>
             </Grid>
         </Border>
     </Border>
+
 </UserControl>
