InitializeHeatmap in MainPage

--- a/MainPage.xaml
+++ b/MainPage.xaml
@@ -5,7 +5,8 @@
     xmlns:controls="using:cycloid.Controls"
     xmlns:cycloid="using:cycloid"
     xmlns:mux="using:Microsoft.UI.Xaml.Controls"
-    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}"
+    Loaded="Page_Loaded">
 
     <Page.Resources>
         <cycloid:ViewModel x:Name="ViewModel" />
